--- a/report/main.tex
+++ b/report/main.tex
@@ -1118,12 +1118,12 @@ Our whole project can be found in github of the nEDM experiment under the name `
 \begin{lstlisting}[xleftmargin=25pt, xrightmargin=25pt,framexleftmargin=10pt,framextopmargin=10pt, framexbottommargin=10pt, caption={Directory structure in the project git repository}, label={lst:git}]
 .
 +-- casings
-    +-- adapter
-    +-- arduino
-    +-- cable_clamp
-    +-- collector
-    +-- humidity
-    +-- temperature
+|   +-- adapter
+|   +-- arduino
+|   +-- cable_clamp
+|   +-- collector
+|   +-- humidity
+|   +-- temperature
 +-- circuit_boards
 +-- datasheets
 +-- diary??
@@ -1132,11 +1132,11 @@ Our whole project can be found in github of the nEDM experiment under the name `
 +-- report
 +-- shop_orders
 +-- sofware
-    +-- avr_wcet_analyzer
-    +-- collector_board
-    +-- ethernet_board
-    +-- humidity_board
-    +-- util
+|   +-- avr_wcet_analyzer
+|   +-- collector_board
+|   +-- ethernet_board
+|   +-- humidity_board
+|   +-- util
 +-- squid_analysis
 \end{lstlisting}
 \subsection{Tips}
