--- a/report/main.tex
+++ b/report/main.tex
@@ -1128,15 +1128,19 @@ Our whole project can be found at GitHub under nEDM-TUM. The repository name is 
 |   +-- temperature
 +-- circuit_boards      // Circuit schematic diagram and 
 |   |                   // PCB schematic files created using KiCad
-|   +-- 3x127_254_adapter       // A PCB chip adapter, used for breadboard debugging
-|   +-- 4x127_254_adapter       // A PCB chip adapter, used for breadboard debugging
+|   +-- 3x127_254_adapter       // A PCB chip adapter, 
+|   |                           // used for breadboard debugging
+|   +-- 4x127_254_adapter       // A PCB chip adapter, 
+|   |                           // used for breadboard debugging
 |   +-- arduino_adapter
 |   +-- humidity
-|   +-- kicad_library           // Footprint and Component library files for KiCad
-|   +-- order           // PCB assembly, which was sent to Fischer Leiterplatten
-|                       // for production
+|   +-- kicad_library           // Footprint and Component
+|   |                           // library files for KiCad
+|   +-- order           // PCB assembly, which was sent to 
+|   |                   // Fischer Leiterplatten for production
 |   +-- sensor_board
-|   +-- so8_breakout        // A PCB chip adapter, used for breadboard debugging
+|   +-- so8_breakout    // A PCB chip adapter, 
+|   |                   // used for breadboard debugging
 |   +-- temperature_board
 +-- datasheets      // Datasheets for sensors, micro processor, etc.
 +-- presentation    // Slides (tex files) for a project presentation
@@ -1151,7 +1155,7 @@ Our whole project can be found at GitHub under nEDM-TUM. The repository name is 
 |   +-- collector_board      
 |   +-- ethernet_board        
 |   +-- humidity_board      
-|   +-- util                // Commonly used utility code
+|   +-- util        // Commonly used utility code
 +-- squid_analysis      
 |   +-- data            // Squid magnetic field measurement protocol.
 |                       // For squid data please write a mail to us.
